<resources>
    <string name="app_name" translatable="false">ASISTEM</string>
    <string name="app_version" translatable="false">ALPHA 0.0.9</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="courses">Curses</string>
    <string name="saved">Saved</string>
    <string-array name="appareance">
        <item>Auto</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>German</item>
        <item>Russian</item>
    </string-array>
    <string name="textWelcome">Welcome Back</string>
    <string name="in_case_of">In case of:</string>
    <string name="in_case_of_text">In the event of a fire, the first thing you have to do is cover your mouth to prevent smoke from entering your lungs.</string>
    <string name="bands">bands</string>
    <string name="days">days</string>
    <string name="call_emergency_number">Emergency Numbers</string>
    <string name="continue_where_you_left_of">Continue where you left of</string>
    <string name="image_logo_description">App logo image</string>
    <string name="image_contributor_description">Contributor avatar image</string>
    <string name="development">Development</string>
    <string name="development_name" translatable="false">Kyb3r Cipher</string>
    <string name="development_contact"><a href="https://kyb3rcipher.com">Contact</a></string>
    <string name="teacher">Teacher</string>
    <string name="teacher_name" translatable="false">Veronica Martinez Anaya</string>
    <string name="design">Design</string>
    <string name="designer_name" translatable="false">Benito</string>
    <string name="designer_contact"><a href="https://github.com/bengiv">@bengiv</a></string>
    <string name="translation">Translation</string>
    <string name="translator_name" translatable="false">Данил Климович (Danil Klimovich)</string>
    <string name="translator_contact" translatable="false"><a href="https://vk.com/daniklimovich">@picaflorito</a></string>
    <string name="button_check_name">Check</string>
    <string name="button_check_description">Check button</string>
    <string name="button_close_description">Close button</string>
    <string name="tapPair_title">Tap the pairs</string>
    <string name="exerciseCorrect">Correct :D</string>
    <string name="exerciseIncorrect">Incorrect, retry! D:</string>
    <string name="exerciseOkay">Okay</string>
    <string name="exerciseCheck">Check</string>
    <string name="exerciseAlert_title">Are you sure about that?</string>
    <string name="exerciseAlert_message">All progress in this lesson will be lost.</string>
    <string name="exerciseAlert_quit">QUIT</string>
    <string name="exerciseAlert_cancel">CANCEL</string>
    <string name="exerciseOptions_title">Select the answer</string>
    <string name="exerciseRead_title">Read the text</string>
    <string name="exerciseVideo_title">Watch the video</string>
    <string name="exerciseSelect_title">Select the correct option</string>
    <string name="exerciseWrite_title">Write the answer</string>
    <string name="exerciseTap_pairs">Tap the pairs</string>
    <string name="courseImageDescription">Course Image</string>
    <string name="courseButtonDescription">Course button</string>
    <string name="courseNoBands_title">YOU DONT HAVE BANDS</string>
    <string name="courseNoBands_message">TEMPORAL I HOPE I HOPE</string>
    <string name="courseCompleted_title">Completed Course</string>
    <string name="courseCompleted_message">TEMPORAL I HOPE I HOPE</string>
    <string name="courseFinished_title">Finished Course</string>
    <string name="courseFinished_message">TEMPORAL I HOPE I HOPE</string>
    <string name="course1Title">Depression</string>
    <string name="course1Description">Assess, treat, and prevent complications in fracture injuries.</string>
    <string name="case0_instruction">Select symptoms of depression:</string>
    <string name="case0_option1">Headache, Crying, Change in dressing style</string>
    <string name="case0_option2">Apathy, Loss of interest, Changes in appetite, Feeling useless/guilty</string>
    <string name="case0_option3">Being alone all day, sleeping a lot, not playing video games</string>
    <string name="case1_instruction">Write a neurotransmitter that, to a lesser extent, causes depression</string>
    <string name="case1_word1">serotonin</string>
    <string name="case1_word2">dopamine</string>
    <string name="case1_word3">norepinephrine</string>
    <string name="case2_instruction">Select a change that occurs in the brain of a person with depression</string>
    <string name="case2_text1">Smaller lobes/hippocampus</string>
    <string name="case2_text2">Empty/blank brain</string>
    <string name="case2_text3">X-ray vision</string>
    <string name="case2_text4">Larger frontal lobes and hippocampus</string>
    <string name="case3_instruction">Approximately how long does a person with a mental illness/depression take to seek help:</string>
    <string name="case3_option1">12 months</string>
    <string name="case3_option2">6 months</string>
    <string name="case3_option3">10 years</string>
    <string name="case4_instruction">What is the difference between clinical depression and simply feeling depressed?</string>
    <string name="case4_option1">Clinical depression is a temporary response to situations like getting bad grades. In contrast, feeling depressed is a medical response and condition that can persist for weeks</string>
    <string name="case4_option2">Clinical depression is a medical condition that persists for at least two weeks and significantly affects the ability to work, play, or love. In contrast, feeling depressed may be a temporary response to situations like getting bad grades</string>
    <string name="case4_option3">Clinical depression is an illness that can be detected by X-rays</string>
    <string name="case5_instruction">What are some effective treatments for depression?</string>
    <string name="case5_text1">Therapy, Medications, Experimental treatments like transcranial magnetic stimulation</string>
    <string name="case5_text2">Therapy, Eating more, Hanging out with friends</string>
    <string name="case5_text3">Therapy, Traveling, Experimental treatments like drugs</string>
    <string name="case6_instruction">Write about how electroconvulsive therapy is described and in what cases it is mentioned to be particularly useful as a treatment for depression</string>
    <string name="case6_word1">electroconvulsive therapy</string>
    <string name="case6_word2">electroconvulsive therapy</string>
    <string name="case6_word3">electroconvulsive therapy</string>
    <string name="case7_instruction">Select the correct answer</string>
    <string name="case7_option1">Depression is an illness cured by medication</string>
    <string name="case7_option2">Depression, although an illness, does not mean the person is weak</string>
    <string name="case7_option3">Depression is equivalent to being a suicidal person</string>
    <string name="case8_instruction">Write the percentage of adults with depression in the United States</string>
    <string name="case8_word1">10%</string>
    <string name="case8_word2">10</string>
    <string name="case8_word3">10percent</string>
    <string name="case8_word4">ten</string>
    <string name="case8_word5">tenpercent</string>
    <string name="case9_instruction">Select the person who may possibly have depression</string>
    <string name="case9_text1">Feeling bad for a few days because of failing an exam</string>
    <string name="case9_text2">Has not wanted to go out in the last 2 weeks due to the death of their pet</string>
    <string name="case9_text3">Feeling guilty, apathetic, and generally unwell for the past month</string>
    <string name="case9_text4">Has not eaten all day because rainy days make them sad</string>
    <string name="case10_instruction">Select the correct answer</string>
    <string name="case10_text1">Crying once is an indication of depression</string>
    <string name="case10_text2">Depression is 100% genetic</string>
    <string name="case10_text3">Talking about depression helps</string>
    <string name="case10_text4">Depression already has a definitive cure</string>
    <string name="readText">
        Depression is a common mental disorder that affects millions of people worldwide. It is characterized by a deep sense of sadness, lack of interest in activities that were once pleasurable, changes in appetite and sleep patterns, persistent fatigue, and difficulties in concentration. Although depression can vary in severity, from mild episodes to more severe forms that can significantly interfere with daily life, it is crucial to recognize early symptoms and seek appropriate help. First aid for depression can play a crucial role in supporting someone experiencing these emotional challenges.
        \n\nOne of the first steps in managing depression is awareness and understanding of signs and symptoms. It can be challenging for those suffering from depression to express their feelings, and often, they may conceal their suffering. Therefore, it is essential to pay attention to changes in behavior, such as social isolation, decreased academic or work performance, changes in sleep or eating habits, and expressions of hopelessness or worthlessness.
        \n\nEmotional support and empathy are crucial in first aid for depression. Showing understanding and listening without judgment can make the affected person feel understood and supported. It is crucial to remember that depression is not just a passing mood or a personal weakness; it is a real medical disorder that requires treatment.
        \n\nEncouraging the person to seek professional help, such as a psychologist, psychiatrist, or counselor, is another vital step in first aid for depression. These mental health professionals are trained to assess and treat depression effectively, using approaches ranging from cognitive-behavioral therapy to medication, depending on the severity of the disorder.
        \n\nPromoting a supportive environment can also make a difference. Social isolation can exacerbate depression symptoms, so maintaining social connections and offering shared activities can be beneficial. Engagement in recreational activities and regular physical exercise has also been shown to be effective in managing depression.
        \n\nIn cases of urgency, where the affected person may pose a risk to themselves or others, it is crucial to seek help immediately. Emergency services and crisis hotlines can provide immediate assistance.
        \nIn summary, first aid for depression involves understanding, emotional support, and promoting the seeking of professional help. Depression is not something that can be overcome simply through willpower, and the stigma surrounding it often makes it difficult for people to seek the necessary support. With awareness, compassion, and action, we can contribute to breaking the stigma and providing the necessary support for those battling depression.
    </string>
    <string name="step2_case0_instruction">Select the correct answer:</string>
    <string name="step2_case0_option1">Showing understanding and listening without judging can make the affected person feel misunderstood and helpless</string>
    <string name="step2_case0_option2">One of the first steps in managing depression is awareness and understanding of signs and symptoms</string>
    <string name="step2_case0_option3">In cases of urgency, where the affected person may pose a risk to themselves or others, it is crucial to seek help immediately</string>
    <string name="step2_case1_instruction">What can a person do to support someone experiencing depression?</string>
</resources>