<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/about" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/appLogo"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/image_logo_description"
                        android:paddingTop="10dp"
                        android:src="@drawable/logo_solid"
                        android:tint="@null"
                        tools:ignore="UseAppTint,ImageContrastCheck" />

                    <TextView
                        android:id="@+id/appName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="3dp"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                    <TextView
                        android:id="@+id/appVersion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif-monospace"
                        android:paddingBottom="10dp"
                        android:text="@string/app_version"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/contributorTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/development"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/contributorCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:contentDescription="@string/image_contributor_description"
                            android:scaleType="centerCrop"
                            android:src="@drawable/avatar_me"
                            android:tint="@null"
                            tools:ignore="UseAppTint" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="10dp"
                        android:paddingEnd="3dp">

                        <TextView
                            android:id="@+id/developmentName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:paddingTop="10dp"
                            android:text="@string/development_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/developmentContact"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingBottom="15dp"
                            android:text="@string/development_contact"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/teacherTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/teacher"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/contributorCard2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="#E91E63"
                            android:contentDescription="@string/image_contributor_description"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_user"
                            android:tint="@null"
                            tools:ignore="UseAppTint" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="10dp"
                        android:paddingEnd="3dp">

                        <TextView
                            android:id="@+id/teacherName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:paddingTop="10dp"
                            android:text="@string/teacher_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/teacherContact"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:autoLink="web"
                            android:paddingBottom="15dp"
                            android:text="@null"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/designTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/design"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/contributorCard3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:contentDescription="@string/image_contributor_description"
                            android:scaleType="centerCrop"
                            android:src="@drawable/avatar_bengiv"
                            android:tint="@null"
                            tools:ignore="UseAppTint" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="10dp"
                        android:paddingEnd="3dp">

                        <TextView
                            android:id="@+id/designName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:paddingTop="10dp"
                            android:text="@string/designer_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/designContact"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingBottom="15dp"
                            android:text="@string/designer_contact"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/translatorTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/translation"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/contributorCard4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:contentDescription="@string/image_contributor_description"
                            android:scaleType="centerCrop"
                            android:src="@drawable/avatar_bengiv"
                            android:tint="@null"
                            tools:ignore="UseAppTint" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="10dp"
                        android:paddingEnd="3dp">

                        <TextView
                            android:id="@+id/translatorName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:paddingTop="10dp"
                            android:text="@string/translator_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/translatorontact"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingBottom="15dp"
                            android:text="@string/designer_contact"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>